fixed user interface spacing for all screens

--- a/styles.css
+++ b/styles.css
@@ -52,13 +52,6 @@ a:hover, #heart_container:hover, #delete_container:hover, #file_input_form:hover
   overflow-y: hidden;
 }
 
-/* .custom-file-label::after {
-    left: 0;
-    right: auto;
-    border-left-width: 0;
-    border-right: inherit;
-} */
-
 #custom_file_label {
   height: 100;
 }
@@ -87,16 +80,16 @@ a:hover, #heart_container:hover, #delete_container:hover, #file_input_form:hover
   background-color: white;
   border-radius: 4px;
   border: 2px #007bff dashed;
-  height: 225px;
+  height: 125px;
   outline-offset: -10px;
 }
 
 .desktop-space-form {
-  top: 175px;
+  top: 100px;
 }
 
 #file_input_form {
-  height: 475px;
+  height: 400px;
 }
 
 .custom-file-input.input ~ .custom-file-label::after-dragover {
@@ -323,6 +316,25 @@ span {
   }
 }
 
+@media only screen
+    and (min-device-width: 601px)
+    and (max-width: 768px) {
+    .search-results-space {
+      top: 175px;
+    }
+}
+
+/* iPhone 6, 7, 8 Landscape Only */
+@media only screen
+  and (min-device-width: 375px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) {
+      .search-results-space {
+        top: 0px;
+    }
+}
+
 /* iPad Portrait and Landscape */
 @media only screen
   and (min-device-width: 768px)
@@ -338,6 +350,21 @@ span {
     .favorite-recipes-visible {
     height: auto;
     }
+
+        .custom-file-input.input ~ .custom-file-label::after {
+  font-family: "Font Awesome 5 Free", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  content: "\f03e   Choose Image";
+  width: 100%;
+  color: white;
+  background-color:#007bff;
+  border-radius: 4px;
+  border: none;
+  height: 100%;
+  }
+
+  .desktop-space-form {
+    top: 0px;
+  }
 }
 
 @media only screen and (max-width: 414px) {
@@ -365,14 +392,6 @@ span {
     position: fixed;
   }
 }
-
-@media only screen and (max-width: 768px) {
-.search-results-space {
- top: 175px;
-}
-}
-
-
 
 @media only screen and (min-width: 1110px) {
     #form {
